--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -124,11 +124,11 @@ custom-power-armor-mk5-grid-size-w="Custom's" Power Armour MK5 Width
 # Also to keep the translation clean keep the Hight first and Witdh under
 
 # Vanilla Armour's
-v-cas-light-armor-inv-size=Light Armour\nMin:0\nMax:200\nBase Default:??\nMod Default:5
-v-cas-heavy-armor-inv-size=Heavy Armour\nMin:0\nMax:300\nBase Default:??\nMod Default:10
-v-cas-modular-armor-inv-size=Modular Armour\nMin:0\nMax:500\nBase Default:??\nMod Default:15
-v-cas-power-armor-inv-size=Power Armour Mk1\nMin:0\nMax:600\nBase Default:??\nMod Default:20
-v-cas-power-armor-mk2-inv-size=Power Armour Mk2\nMin:0\nMax:700\nBase Default:??\nMod Default:30
+v-cas-light-armor-inv-size=Light Armour\nMin:0\nMax:200\nBase Default:0\nMod Default:5
+v-cas-heavy-armor-inv-size=Heavy Armour\nMin:0\nMax:300\nBase Default:0\nMod Default:10
+v-cas-modular-armor-inv-size=Modular Armour\nMin:0\nMax:500\nBase Default:10\nMod Default:15
+v-cas-power-armor-inv-size=Power Armour Mk1\nMin:0\nMax:600\nBase Default:20\nMod Default:20
+v-cas-power-armor-mk2-inv-size=Power Armour Mk2\nMin:0\nMax:700\nBase Default:30\nMod Default:30
 
 modular-armor-grid-size-h=Modular Armour Height\nMin:0\nMax:10\nBase Default:5\nMod Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 modular-armor-grid-size-w=Modular Armour Width\nMin:0\nMax:10\nBase Default:5\nMod Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -140,11 +140,11 @@ power-armor-mk2-grid-size-h=Power Armour MK2 Height\nMin:0\nMax:40\nBase Default
 power-armor-mk2-grid-size-w=Power Armour MK2 Width\nMin:0\nMax:40\nBase Default:10\nMod Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Bob's Armour's
-cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armor 2\nMin:0\nMax:500\nBase Default:??\nMod Default:40
-cas-bob-heavy-armor-3-inv-size=Bob's Heavy Armor 3\nMin:0\nMax:600\nBase Default:??\nMod Default:60
-cas-bob-power-armor-mk3-inv-size=Bob's Power Armour 3\nMin:0\nMax:800\nBase Default:??\nMod Default:40
-cas-bob-power-armor-mk4-inv-size=Bob's Power Armour 4\nMin:0\nMax:900\nBase Default:??\nMod Default:50
-cas-bob-power-armor-mk5-inv-size=Bob's Power Armour 5\nMin:0\nMax:1000\nBase Default:??\nMod Default:60
+cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armor 2\nMin:0\nMax:500\nBase Default:0\nMod Default:40
+cas-bob-heavy-armor-3-inv-size=Bob's Heavy Armor 3\nMin:0\nMax:600\nBase Default:0\nMod Default:60
+cas-bob-power-armor-mk3-inv-size=Bob's Power Armour 3\nMin:0\nMax:800\nBase Default:40\nMod Default:40
+cas-bob-power-armor-mk4-inv-size=Bob's Power Armour 4\nMin:0\nMax:900\nBase Default:50\nMod Default:50
+cas-bob-power-armor-mk5-inv-size=Bob's Power Armour 5\nMin:0\nMax:1000\nBase Default:60\nMod Default:60
 
 bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 Height\nMin:0\nMax:45\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 Width\nMin:0\nMax:45\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -170,10 +170,10 @@ custom-power-armor-mk5-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMa
 custom-power-armor-mk5-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:500\nBase Default:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Power Armour mk3 
-cas-pamk3-lvest-inv-size=MK3's Light Utility Vest\nMin:0\nMax:500\nBase Default:??\nMod Default:15
-cas-pamk3-hvest-inv-size=MK3's Hevay Utility Vest\nMin:0\nMax:600\nBase Default:??\nMod Default:20
-cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3\nMin:0\nMax:800\nBase Default:??\nMod Default:50
-cas-pamk3-pamk4-inv-size=MK3's Power Armour Mk4\nMin:0\nMax:900\nBase Default:??\nMod Default:60
+cas-pamk3-lvest-inv-size=MK3's Light Utility Vest\nMin:0\nMax:500\nBase Default:10\nMod Default:15
+cas-pamk3-hvest-inv-size=MK3's Hevay Utility Vest\nMin:0\nMax:600\nBase Default:20\nMod Default:20
+cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3\nMin:0\nMax:800\nBase Default:50\nMod Default:50
+cas-pamk3-pamk4-inv-size=MK3's Power Armour Mk4\nMin:0\nMax:900\nBase Default:60\nMod Default:60
 
 pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:30\nBase Default:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nBase Default:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -210,9 +210,9 @@ mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:400\nBase Defau
 mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:400\nBase Default:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Factorio Extended Equipment
-cas-extended-power-armor-1-inv-size=FE Power Armour 1\nMin:0\nMax:600\nBase Default:??\nMod Default:50
-cas-extended-power-armor-2-inv-size=FE Power Armour 2\nMin:0\nMax:700\nBase Default:??\nMod Default:80
-cas-extended-power-armor-3-inv-size=FE Power Armour 3\nMin:0\nMax:800\nBase Default:??\nMod Default:100
+cas-extended-power-armor-1-inv-size=FE Power Armour 1\nMin:0\nMax:600\nBase Default:50\nMod Default:50
+cas-extended-power-armor-2-inv-size=FE Power Armour 2\nMin:0\nMax:700\nBase Default:80\nMod Default:80
+cas-extended-power-armor-3-inv-size=FE Power Armour 3\nMin:0\nMax:800\nBase Default:100\nMod Default:100
 
 extended-armor-mk1-grid-size-h="FE's" Power Armour MK1 Height\nMin:0\nMax:50\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 extended-armor-mk1-grid-size-w="FE's" Power Armour MK1 Width\nMin:0\nMax:50\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -224,8 +224,8 @@ extended-armor-mk3-grid-size-h="FE's" Power Armour MK3 Height\nMin:0\nMax:70\nBa
 extended-armor-mk3-grid-size-w="FE's" Power Armour MK3 Width\nMin:0\nMax:70\nBase Default:18\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Power And Armour
-cas-PaA-power-armor-mk3-inv-size=P&A Power Armour MK3\nMin:0\nMax:800\nBase Default:??\nMod Default:40
-cas-PaA-power-armor-mk4-inv-size=P&A Power Armour MK4\nMin:0\nMax:900\nBase Default:??\nMod Default:50
+cas-PaA-power-armor-mk3-inv-size=P&A Power Armour MK3\nMin:0\nMax:800\nBase Default:60\nMod Default:60
+cas-PaA-power-armor-mk4-inv-size=P&A Power Armour MK4\nMin:0\nMax:900\nBase Default:70\nMod Default:70
 
 pa-mk3-grid-size-h="P&A's" Power Armours Mk3 Height\nMin:0\nMax:40\nBase Default:20\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 pa-mk3-grid-size-w="P&A's" Power Armours Mk3 Width\nMin:0\nMax:40\nBase Default:20\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -234,7 +234,7 @@ pa-mk4-grid-size-h="P&A's" Power Armours Mk4 Height\nMin:0\nMax:50\nBase Default
 pa-mk4-grid-size-w="P&A's" Power Armours Mk4 Width\nMin:0\nMax:50\nBase Default:24\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Rampant Arsenal
-cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3\nMin:0\nMax:800\nBase Default:??\nMod Default:60
+cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3\nMin:0\nMax:800\nBase Default:60\nMod Default:60
 
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nBase Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nBase Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
