--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -118,11 +118,11 @@ custom-power-armor-mk5-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde
 [mod-setting-description]
 
 # Vanilla Armour's
-v-cas-light-armor-inv-size=Lett Rustning\nMin:0\nMaks:200\nSpillets Normal:??\nModden's Normal:5
-v-cas-heavy-armor-inv-size=Tung Rustning\nMin:0\nMaks:300\nSpillets Normal:??\nModden's Normal:10
-v-cas-modular-armor-inv-size=Modulær Rustning\nMin:0\nMaks:500\nSpillets Normal:??\nModden's Normal:15
-v-cas-power-armor-inv-size=Elektrisk Rustning MK1\nMin:0\nMaks:600\nSpillets Normal:??\nModden's Normal:20
-v-cas-power-armor-mk2-inv-size=Elektrisk Rustning MK2\nMin:0\nMaks:700\nSpillets Normal:??\nModden's Normal:30
+v-cas-light-armor-inv-size=Lett Rustning\nMin:0\nMaks:200\nSpillets Normal:0\nModden's Normal:5
+v-cas-heavy-armor-inv-size=Tung Rustning\nMin:0\nMaks:300\nSpillets Normal:0\nModden's Normal:10
+v-cas-modular-armor-inv-size=Modulær Rustning\nMin:0\nMaks:500\nSpillets Normal:10\nModden's Normal:15
+v-cas-power-armor-inv-size=Elektrisk Rustning MK1\nMin:0\nMaks:600\nSpillets Normal:20\nModden's Normal:20
+v-cas-power-armor-mk2-inv-size=Elektrisk Rustning MK2\nMin:0\nMaks:700\nSpillets Normal:30\nModden's Normal:30
 
 modular-armor-grid-size-h=Modulær Rustnings Rutenett Høyde\nMin:0\nMaks:10\nSpillets Normal:5\nModden's Normal:5\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\nMin:0\nMaks:10\nSpillets Normal:5\nModden's Normal:5\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
@@ -134,11 +134,11 @@ power-armor-mk2-grid-size-h=Elektrisk Rustning MK2 Rutenett Høyde\nMin:0\nMaks:
 power-armor-mk2-grid-size-w=Elektrisk Rustning MK2 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Normal:10\nModden's Normal:20\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # Bob's Armour's
-cas-bob-heavy-armor-2-inv-size=Bob's Tung Rustning Mk2\nMin:0\nMaks:500\nSpillets Normal:??\nModden's Normal:40
-cas-bob-heavy-armor-3-inv-size=Bob's Tung Rustning Mk3\nMin:0\nMaks:600\nSpillets Normal:??\nModden's Normal:60
-cas-bob-power-armor-mk3-inv-size=Bob's Elektrisk Rustning Mk3\nMin:0\nMaks:800\nSpillets Normal:??\nModden's Normal:40
-cas-bob-power-armor-mk4-inv-size=Bob's Elektrisk Rustning Mk4\nMin:0\nMaks:900\nSpillets Normal:??\nModden's Normal:50
-cas-bob-power-armor-mk5-inv-size=Bob's Elektrisk Rustning Mk5\nMin:0\nMaks:1000\nSpillets Normal:??\nModden's Normal:60
+cas-bob-heavy-armor-2-inv-size=Bob's Tung Rustning Mk2\nMin:0\nMaks:500\nSpillets Normal:0\nModden's Normal:40
+cas-bob-heavy-armor-3-inv-size=Bob's Tung Rustning Mk3\nMin:0\nMaks:600\nSpillets Normal:0\nModden's Normal:60
+cas-bob-power-armor-mk3-inv-size=Bob's Elektrisk Rustning Mk3\nMin:0\nMaks:800\nSpillets Normal:40\nModden's Normal:40
+cas-bob-power-armor-mk4-inv-size=Bob's Elektrisk Rustning Mk4\nMin:0\nMaks:900\nSpillets Normal:50\nModden's Normal:50
+cas-bob-power-armor-mk5-inv-size=Bob's Elektrisk Rustning Mk5\nMin:0\nMaks:1000\nSpillets Normal:60\nModden's Normal:60
 
 bob-power-armor-mk3-grid-size-h="Bob's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:12\nModden's Normal:35\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 bob-power-armor-mk3-grid-size-w="Bob's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Noraml:12\nModden's Normal:35\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
@@ -149,27 +149,31 @@ bob-power-armor-mk4-grid-size-w="Bob's" Elektrisk Rustning MK4 Rutenett Bredde\n
 bob-power-armor-mk5-grid-size-h="Bob's" Elektrisk Rustning MK5 Rutenett Høyde\nMin:0\nMaks:550\nSpillets Noraml:16\nModden's Normal:55\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 bob-power-armor-mk5-grid-size-w="Bob's" Elektrisk Rustning MK5 Rutenett Bredde\nMin:0\nMaks:550\nSpillets Noraml:16\nModden's Normal:55\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
+# Custom Power Armour Fix/ (Custom Power Armour Reborn)
+cas-custom-power-armor-mk3-inv-size=Custom Elektrisk Rustning MK3\nMin:0\nMax:800\nSpillets Normal:40\nModden's Normal:40
+cas-custom-power-armor-mk4-inv-size=Custom Elektrisk Rustning MK4\nMin:0\nMax:900\nSpillets Normal:40\nModden's Normal:50
+cas-custom-power-armor-mk5-inv-size=Custom Elektrisk Rustning MK5\nMin:0\nMax:1000\nSpillets Normal:40\nModden's Normal:60
+
+custom-power-armor-mk3-grid-size-h="Custom's" Elektrisk Rustning MK3 Height\nMin:0\nMaks:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk3-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde\nMin:0\nMaks:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+custom-power-armor-mk4-grid-size-h="Custom's" Elektrisk Rustning MK4 Height\nMin:0\nMaks:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk4-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde\nMin:0\nMaks:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+custom-power-armor-mk5-grid-size-h="Custom's" Elektrisk Rustning MK5 Height\nMin:0\nMaks:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk5-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde\nMin:0\nMaks:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
 # Power Armour mk3 
-cas-pamk3-lvest-inv-size=MK3's Lett Bruksvest\nMin:0\nMaks:500\nSpillets Normal:??\nModden's Normal:15
-cas-pamk3-hvest-inv-size=MK3's Tung Bruksvest\nMin:0\nMaks:600\nSpillets Normal:??\nModden's Normal:20
-cas-pamk3-pamk3-inv-size=MK3's Elektrisk Rustning MK3\nMin:0\nMaks:800\nSpillets Normal:??\nModden's Normal:50
-cas-pamk3-pamk4-inv-size=MK3's Elektrisk Rustning Mk4\nMin:0\nMaks:900\nSpillets Normal:??\nModden's Normal:60
+cas-pamk3-lvest-inv-size=MK3's Lett Bruksvest\nMin:0\nMaks:500\nSpillets Normal:10\nModden's Normal:15
+cas-pamk3-hvest-inv-size=MK3's Tung Bruksvest\nMin:0\nMaks:600\nSpillets Normal:20\nModden's Normal:20
+cas-pamk3-pamk3-inv-size=MK3's Elektrisk Rustning MK3\nMin:0\nMaks:800\nSpillets Normal:50\nModden's Normal:50
+cas-pamk3-pamk4-inv-size=MK3's Elektrisk Rustning Mk4\nMin:0\nMaks:900\nSpillets Normal:60\nModden's Normal:60
 
 pamk3-pmak3-grid-size-h="MK3's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Noraml:14\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 pamk3-pmak3-grid-size-w="MK3's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:30\nSpillets Noraml:14\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 pamk3-pmak4-grid-size-h="MK3's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Noraml:20\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 pamk3-pmak4-grid-size-w="MK3's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Noraml:20\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-# Krastorio 2
-cas-k2-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:800\nSpillets Normal:??\nModden's Normal:40
-cas-k2-power-armor-mk4-inv-size=K2 Elektrisk Rustning Mk4\nMin:0\nMaks:900\nSpillets Normal:??\nModden's Normal:50
-
-mk3-armor-grid-size-h="K2's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-mk3-armor-grid-size-w="K2's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-mk4-armor-grid-size-h="K2's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:400\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-mk4-armor-grid-size-w="K2's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:400\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # Space Exploration
 cas-se-thruster-suit-inv-size=SE RomDrakt 1\nMin:0\nMaks:600\nSpillets Normal:??\nModden's Normal:30
@@ -189,20 +193,20 @@ se-thruster-suit-3-grid-size-w="SE's" RomDrakt 3 Rutenett Bredde\nMin:0\nMaks:60
 se-thruster-suit-4-grid-size-h="SE's" RomDrakt 4 Rutenett Høyde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 se-thruster-suit-4-grid-size-w="SE's" RomDrakt 4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-# Power And Armour
-cas-PaA-power-armor-mk3-inv-size=P&A Elektrisk Rustning MK3\nMin:0\nMaks:800\nSpillets Normal:??\nModden's Normal:40
-cas-PaA-power-armor-mk4-inv-size=P&A Elektrisk Rustning MK4\nMin:0\nMaks:900\nSpillets Normal:??\nModden's Normal:50
+# Krastorio 2
+cas-k2-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:800\nSpillets Normal:??\nModden's Normal:40
+cas-k2-power-armor-mk4-inv-size=K2 Elektrisk Rustning Mk4\nMin:0\nMaks:900\nSpillets Normal:??\nModden's Normal:50
 
-pa-mk3-grid-size-h="P&A's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Noraml:20\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-pa-mk3-grid-size-w="P&A's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Noraml:20\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+mk3-armor-grid-size-h="K2's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+mk3-armor-grid-size-w="K2's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-pa-mk4-grid-size-h="P&A's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Noraml:24\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-pa-mk4-grid-size-w="P&A's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Noraml:24\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+mk4-armor-grid-size-h="K2's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:400\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+mk4-armor-grid-size-w="K2's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:400\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # Factorio Extended Equipment
-cas-extended-power-armor-1-inv-size=FE Elektrisk Rustning 1\nMin:0\nMaks:600\nSpillets Normal:??\nModden's Normal:50
-cas-extended-power-armor-2-inv-size=FE Elektrisk Rustning 2\nMin:0\nMaks:700\nSpillets Normal:??\nModden's Normal:80
-cas-extended-power-armor-3-inv-size=FE Elektrisk Rustning 3\nMin:0\nMaks:800\nSpillets Normal:??\nModden's Normal:100
+cas-extended-power-armor-1-inv-size=FE Elektrisk Rustning 1\nMin:0\nMaks:600\nSpillets Normal:50\nModden's Normal:50
+cas-extended-power-armor-2-inv-size=FE Elektrisk Rustning 2\nMin:0\nMaks:700\nSpillets Normal:80\nModden's Normal:80
+cas-extended-power-armor-3-inv-size=FE Elektrisk Rustning 3\nMin:0\nMaks:800\nSpillets Normal:100\nModden's Normal:100
 
 extended-armour-mk1-grid-size-h="FE's" Elektrisk Rustning MK1 Høyde\nMin:0\nMaks:50\nSpillets Noraml:12\nMod Default:35\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 extended-armour-mk1-grid-size-w="FE's" Elektrisk Rustning MK1 Bredde\nMin:0\nMaks:50\nSpillets Noraml:12\nMod Default:35\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
@@ -213,22 +217,18 @@ extended-armour-mk2-grid-size-w="FE's" Elektrisk Rustning MK2 Bredde\nMin:0\nMak
 extended-armour-mk3-grid-size-h="FE's" Elektrisk Rustning MK3 Høyde\nMin:0\nMaks:70\nSpillets Noraml:18\nModden's Normal:55\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 extended-armour-mk3-grid-size-w="FE's" Elektrisk Rustning MK3 Bredde\nMin:0\nMaks:70\nSpillets Noraml:18\nModden's Normal:55\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
+# Power And Armour
+cas-PaA-power-armor-mk3-inv-size=P&A Elektrisk Rustning MK3\nMin:0\nMaks:800\nSpillets Normal:60\nModden's Normal:60
+cas-PaA-power-armor-mk4-inv-size=P&A Elektrisk Rustning MK4\nMin:0\nMaks:900\nSpillets Normal:70\nModden's Normal:70
+
+pa-mk3-grid-size-h="P&A's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Noraml:20\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+pa-mk3-grid-size-w="P&A's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Noraml:20\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+pa-mk4-grid-size-h="P&A's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Noraml:24\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+pa-mk4-grid-size-w="P&A's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Noraml:24\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
 # Rampant Arsenal
-cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Elektrisk Rustning MK3\nMin:0\nMaks:800\nSpillets Normal:??\nModden's Normal:60
+cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Elektrisk Rustning MK3\nMin:0\nMaks:800\nSpillets Normal:60\nModden's Normal:60
 
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning Mk3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning Mk3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-# Custom Power Armour Fix/ (Custom Power Armour Reborn)
-cas-custom-power-armor-mk3-inv-size=Custom Elektrisk Rustning MK3\nMin:0\nMax:800\nSpillets Normal:40\nModden's Normal:40
-cas-custom-power-armor-mk4-inv-size=Custom Elektrisk Rustning MK4\nMin:0\nMax:900\nSpillets Normal:40\nModden's Normal:50
-cas-custom-power-armor-mk5-inv-size=Custom Elektrisk Rustning MK5\nMin:0\nMax:1000\nSpillets Normal:40\nModden's Normal:60
-
-custom-power-armor-mk3-grid-size-h="Custom's" Elektrisk Rustning MK3 Height\nMin:0\nMaks:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-custom-power-armor-mk3-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde\nMin:0\nMaks:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-custom-power-armor-mk4-grid-size-h="Custom's" Elektrisk Rustning MK4 Height\nMin:0\nMaks:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-custom-power-armor-mk4-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde\nMin:0\nMaks:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-custom-power-armor-mk5-grid-size-h="Custom's" Elektrisk Rustning MK5 Height\nMin:0\nMaks:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-custom-power-armor-mk5-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde\nMin:0\nMaks:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
