--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -182,10 +182,10 @@ pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Def
 pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Space Exploration
-cas-se-thruster-suit-inv-size=SE Space Suit 1\nMin:0\nMax:600\nBase Default:??\nMod Default:30
-cas-se-thruster-suit-2-inv-size=SE Space Suit 2\nMin:0\nMax:700\nBase Default:??\nMod Default:40
-cas-se-thruster-suit-3-inv-size=SE Space Suit 3\nMin:0\nMax:800\\nBase Default:??\nMod Default:50
-cas-se-thruster-suit-4-inv-size=SE Space Suit 4\nMin:0\nMax:900\nBase Default:??\nMod Default:60
+cas-se-thruster-suit-inv-size=SE Space Suit 1\nMin:0\nMax:600\nBase Default:20\nMod Default:40
+cas-se-thruster-suit-2-inv-size=SE Space Suit 2\nMin:0\nMax:700\nBase Default:40\nMod Default:60
+cas-se-thruster-suit-3-inv-size=SE Space Suit 3\nMin:0\nMax:800\\nBase Default:50\nMod Default:80
+cas-se-thruster-suit-4-inv-size=SE Space Suit 4\nMin:0\nMax:900\nBase Default:60\nMod Default:100
 
 se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height\nMin:0\nMax:30\nBase Default:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width\nMin:0\nMax:30\nBase Default:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -200,8 +200,8 @@ se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:500\nBase 
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:500\nBase Default:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Krastorio 2
-cas-k2-power-armor-mk3-inv-size=K2 Power Armour Mk3\nMin:0\nMax:800\nBase Default:??\nMod Default:40
-cas-k2-power-armor-mk4-inv-size=K2 Power Armour Mk4\nMin:0\nMax:900\nBase Default:??\nMod Default:50
+cas-k2-power-armor-mk3-inv-size=K2 Power Armour Mk3\nMin:0\nMax:800\nBase Default:40\nMod Default:40
+cas-k2-power-armor-mk4-inv-size=K2 Power Armour Mk4\nMin:0\nMax:900\nBase Default:50\nMod Default:50
 
 mk3-armor-grid-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nBase Default:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 mk3-armor-grid-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nBase Default:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
