--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -176,10 +176,10 @@ pamk3-pmak4-grid-size-h="MK3's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nM
 pamk3-pmak4-grid-size-w="MK3's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Noraml:20\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # Space Exploration
-cas-se-thruster-suit-inv-size=SE RomDrakt 1\nMin:0\nMaks:600\nSpillets Normal:??\nModden's Normal:30
-cas-se-thruster-suit-2-inv-size=SE RomDrakt 2\nMin:0\nMaks:700\nSpillets Normal:??\nModden's Normal:40
-cas-se-thruster-suit-3-inv-size=SE RomDrakt 3\nMin:0\nMaks:800\\nSpillets Normal:??\nModden's Normal:50
-cas-se-thruster-suit-4-inv-size=SE RomDrakt 4\nMin:0\nMaks:900\nSpillets Normal:??\nModden's Normal:60
+cas-se-thruster-suit-inv-size=SE RomDrakt 1\nMin:0\nMaks:600\nSpillets Normal:20\nModden's Normal:40
+cas-se-thruster-suit-2-inv-size=SE RomDrakt 2\nMin:0\nMaks:700\nSpillets Normal:40\nModden's Normal:60
+cas-se-thruster-suit-3-inv-size=SE RomDrakt 3\nMin:0\nMaks:800\\nSpillets Normal:50\nModden's Normal:80
+cas-se-thruster-suit-4-inv-size=SE RomDrakt 4\nMin:0\nMaks:900\nSpillets Normal:60\nModden's Normal:100
 
 se-thruster-suit-grid-size-h="SE's" RomDrakt 1 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 se-thruster-suit-grid-size-w="SE's" RomDrakt 1 Rutenett Bredde\nMin:0\nMaks:30\Spillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
@@ -194,8 +194,8 @@ se-thruster-suit-4-grid-size-h="SE's" RomDrakt 4 Rutenett Høyde\nMin:0\nMaks:50
 se-thruster-suit-4-grid-size-w="SE's" RomDrakt 4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # Krastorio 2
-cas-k2-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:800\nSpillets Normal:??\nModden's Normal:40
-cas-k2-power-armor-mk4-inv-size=K2 Elektrisk Rustning Mk4\nMin:0\nMaks:900\nSpillets Normal:??\nModden's Normal:50
+cas-k2-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:800\nSpillets Normal:40\nModden's Normal:40
+cas-k2-power-armor-mk4-inv-size=K2 Elektrisk Rustning Mk4\nMin:0\nMaks:900\nSpillets Normal:50\nModden's Normal:50
 
 mk3-armor-grid-size-h="K2's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 mk3-armor-grid-size-w="K2's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
