--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -44,15 +44,22 @@ pamk3-pmak3-grid-size-w="Mk3's" Power Armour MK3 Width
 pamk3-pmak4-grid-size-h="Mk3's" Power Armour MK4 Height
 pamk3-pmak4-grid-size-w="Mk3's" Power Armour MK4 Width
 
-# Krastorio 2
-cas-k2-power-armor-mk3-inv-size=K2 Power Armour Mk3 Inv Size
-cas-k2-power-armor-mk4-inv-size=K2 Power Armour Mk4 Inv Size
+# Industrial Revolution 2
+ir2-light-cas-grid-size-h="IR2" Light Armour Height
+ir2-light-cas-grid-size-w="IR2" Light Armour Width
 
+ir2-heavy-cas-grid-size-h="IR2" Heavy Armour Height
+ir2-heavy-cas-grid-size-w="IR2" Heavy Armour Width
+
+# Krastorio 2
 mk3-armor-grid-size-h="K2's" Power Armour MK3 Height
 mk3-armor-grid-size-w="K2's" Power Armour MK3 Width
 
 mk4-armor-grid-size-h="K2's" Power Armour MK4 Height
 mk4-armor-grid-size-w="K2's" Power Armour MK4 Width
+
+cas-k2-power-armor-mk3-inv-size=K2 Power Armour Mk3 Inv Size
+cas-k2-power-armor-mk4-inv-size=K2 Power Armour Mk4 Inv Size
 
 # Space Exploration
 cas-se-thruster-suit-inv-size=SE Space Suit 1 Inv Size
