--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -43,6 +43,13 @@ pamk3-pmak3-grid-size-w="Mk3's" Elektrisk Rustning MK3 Bredde
 pamk3-pmak4-grid-size-h="Mk3's" Elektrisk Rustning MK4 Høyde
 pamk3-pmak4-grid-size-w="Mk3's" Elektrisk Rustning MK4 Bredde
 
+# Industrial Revolution 2
+ir2-light-cas-grid-size-h="IR2" Lett Rustining Høyde
+ir2-light-cas-grid-size-w="IR2" Lett Rustining Bredde
+
+ir2-heavy-cas-grid-size-h="IR2" Tung Rustining Høyde
+ir2-heavy-cas-grid-size-w="IR2" Tung Rustining Bredde
+
 # Krastorio 2
 cas-k2-power-armor-mk3-inv-size=K2 Power Armour Mk3 Inv Størrelse
 cas-k2-power-armor-mk4-inv-size=K2 Power Armour Mk4 Inv Størrelse
