--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -23,14 +23,14 @@ cas-bob-power-armor-mk3-inv-size=Bob's Power Armour MK3 Inv Size
 cas-bob-power-armor-mk4-inv-size=Bob's Power Armour MK4 Inv Size
 cas-bob-power-armor-mk5-inv-size=Bob's Power Armour MK5 Inv Size
 
-bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 Height
-bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 Width
+bob-power-armor-mk3-grid-size-h=Bob's Power Armour MK3 Height
+bob-power-armor-mk3-grid-size-w=Bob's Power Armour MK3 Width
 
-bob-power-armor-mk4-grid-size-h="Bob's" Power Armour MK4 Height
-bob-power-armor-mk4-grid-size-w="Bob's" Power Armour MK4 Width
+bob-power-armor-mk4-grid-size-h=Bob's Power Armour MK4 Height
+bob-power-armor-mk4-grid-size-w=Bob's Power Armour MK4 Width
 
-bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 Height
-bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 Width
+bob-power-armor-mk5-grid-size-h=Bob's Power Armour MK5 Height
+bob-power-armor-mk5-grid-size-w=Bob's Power Armour MK5 Width
 
 # Power Armour mk3
 cas-pamk3-lvest-inv-size=MK3's Light Utility Vest Inv Size
@@ -38,90 +38,90 @@ cas-pamk3-hvest-inv-size=MK3's Hevay Utility Vest Inv Size
 cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3 Inv Size
 cas-pamk3-pamk4-inv-size=MK3's Power Armour MK4 Inv Size
 
-pamk3-pmak3-grid-size-h="Mk3's" Power Armour MK3 Height
-pamk3-pmak3-grid-size-w="Mk3's" Power Armour MK3 Width
+pamk3-pmak3-grid-size-h=Mk3's Power Armour MK3 Height
+pamk3-pmak3-grid-size-w=Mk3's Power Armour MK3 Width
 
-pamk3-pmak4-grid-size-h="Mk3's" Power Armour MK4 Height
-pamk3-pmak4-grid-size-w="Mk3's" Power Armour MK4 Width
+pamk3-pmak4-grid-size-h=Mk3's Power Armour MK4 Height
+pamk3-pmak4-grid-size-w=Mk3's Power Armour MK4 Width
 
 # Industrial Revolution 2
-ir2-light-cas-grid-size-h="IR2" Light Armour Height
-ir2-light-cas-grid-size-w="IR2" Light Armour Width
+ir2-light-cas-grid-size-h=IR2 Light Armour Height
+ir2-light-cas-grid-size-w=IR2 Light Armour Width
 
-ir2-heavy-cas-grid-size-h="IR2" Heavy Armour Height
-ir2-heavy-cas-grid-size-w="IR2" Heavy Armour Width
+ir2-heavy-cas-grid-size-h=IR2 Heavy Armour Height
+ir2-heavy-cas-grid-size-w=IR2 Heavy Armour Width
 
 # Krastorio 2
-mk3-armor-grid-size-h="K2's" Power Armour MK3 Height
-mk3-armor-grid-size-w="K2's" Power Armour MK3 Width
+mk3-armor-grid-size-h=K2's Power Armour MK3 Height
+mk3-armor-grid-size-w=K2's Power Armour MK3 Width
 
-mk4-armor-grid-size-h="K2's" Power Armour MK4 Height
-mk4-armor-grid-size-w="K2's" Power Armour MK4 Width
+mk4-armor-grid-size-h=K2's Power Armour MK4 Height
+mk4-armor-grid-size-w=K2's Power Armour MK4 Width
 
-cas-k2-power-armor-mk3-inv-size=K2 Power Armour Mk3 Inv Size
-cas-k2-power-armor-mk4-inv-size=K2 Power Armour Mk4 Inv Size
+cas-k2-power-armor-mk3-inv-size=K2's Power Armour Mk3 Inv Size
+cas-k2-power-armor-mk4-inv-size=K2's Power Armour Mk4 Inv Size
 
 # Space Exploration
-cas-se-thruster-suit-inv-size=SE Space Suit 1 Inv Size
-cas-se-thruster-suit-2-inv-size=SE Space Suit 2 Inv Size
-cas-se-thruster-suit-3-inv-size=SE Space Suit 3 Inv Size
-cas-se-thruster-suit-4-inv-size=SE Space Suit 4 Inv Size
+cas-se-thruster-suit-inv-size=SE's Space Suit 1 Inv Size
+cas-se-thruster-suit-2-inv-size=SE's Space Suit 2 Inv Size
+cas-se-thruster-suit-3-inv-size=SE's Space Suit 3 Inv Size
+cas-se-thruster-suit-4-inv-size=SE's Space Suit 4 Inv Size
 
-se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height
-se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width
+se-thruster-suit-grid-size-h=SE's Space Suit 1 Height
+se-thruster-suit-grid-size-w=SE's Space Suit 1 Width
 
-se-thruster-suit-2-grid-size-h="SE's" Space Suit 2 Height
-se-thruster-suit-2-grid-size-w="SE's" Space Suit 2 Width
+se-thruster-suit-2-grid-size-h=SE's Space Suit 2 Height
+se-thruster-suit-2-grid-size-w=SE's Space Suit 2 Width
 
-se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 Height
-se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 Width
+se-thruster-suit-3-grid-size-h=SE's Space Suit 3 Height
+se-thruster-suit-3-grid-size-w=SE's Space Suit 3 Width
 
-se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height
-se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width
+se-thruster-suit-4-grid-size-h=SE's Space Suit 4 Height
+se-thruster-suit-4-grid-size-w=SE's Space Suit 4 Width
 
 # Power And Armour
-cas-PaA-power-armor-mk3-inv-size=P&A Power Armour MK3 Inv Size
-cas-PaA-power-armor-mk4-inv-size=P&A Power Armour MK4 Inv Size
+cas-PaA-power-armor-mk3-inv-size=P&A's Power Armour MK3 Inv Size
+cas-PaA-power-armor-mk4-inv-size=P&A's Power Armour MK4 Inv Size
 
-pa-mk3-grid-size-h="P&A's" Power Armours MK3 Height
-pa-mk3-grid-size-w="P&A's" Power Armours MK3 Width
+pa-mk3-grid-size-h=P&A's Power Armours MK3 Height
+pa-mk3-grid-size-w=P&A's Power Armours MK3 Width
 
-pa-mk4-grid-size-h="P&A's" Power Armours MK4 Height
-pa-mk4-grid-size-w="P&A's" Power Armours MK4 Width
+pa-mk4-grid-size-h=P&A's Power Armours MK4 Height
+pa-mk4-grid-size-w=P&A's Power Armours MK4 Width
 
 # Factorio Extended Equipment
-cas-extended-power-armor-1-inv-size=FE Power Armour 1 Inv Size
-cas-extended-power-armor-2-inv-size=FE Power Armour 2 Inv Size
-cas-extended-power-armor-3-inv-size=FE Power Armour 3 Inv Size
+cas-extended-power-armor-1-inv-size=FE's Power Armour 1 Inv Size
+cas-extended-power-armor-2-inv-size=FE's Power Armour 2 Inv Size
+cas-extended-power-armor-3-inv-size=FE's Power Armour 3 Inv Size
 
-extended-armor-mk1-grid-size-h="FE's" Power Armour MK1 Height
-extended-armor-mk1-grid-size-w="FE's" Power Armour MK1 Width
+extended-armor-mk1-grid-size-h=FE's Power Armour MK1 Height
+extended-armor-mk1-grid-size-w="FE's Power Armour MK1 Width
 
-extended-armor-mk2-grid-size-h="FE's" Power Armour MK2 Height
-extended-armor-mk2-grid-size-w="FE's" Power Armour MK2 Width
+extended-armor-mk2-grid-size-h=FE's Power Armour MK2 Height
+extended-armor-mk2-grid-size-w=FE's Power Armour MK2 Width
 
-extended-armor-mk3-grid-size-h="FE's" Power Armour MK3 Height
-extended-armor-mk3-grid-size-w="FE's" Power Armour MK3 Width
+extended-armor-mk3-grid-size-h=FE's Power Armour MK3 Height
+extended-armor-mk3-grid-size-w=FE's Power Armour MK3 Width
 
 # Rampant Arsenal
-cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3 Inv Size
+cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=Arsenal's Power Armour MK3 Inv Size
 
-power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour MK3 Height
-power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour MK3 Width
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Power Armour MK3 Height
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour MK3 Width
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn
-cas-custom-power-armor-mk3-inv-size=Custom Power Armour MK3 Inv Size
-cas-custom-power-armor-mk4-inv-size=Custom Power Armour MK4 Inv Size
-cas-custom-power-armor-mk5-inv-size=Custom Power Armour MK5 Inv Size
+cas-custom-power-armor-mk3-inv-size=Custom's Power Armour MK3 Inv Size
+cas-custom-power-armor-mk4-inv-size=Custom's Power Armour MK4 Inv Size
+cas-custom-power-armor-mk5-inv-size=Custom's Power Armour MK5 Inv Size
 
-custom-power-armor-mk3-grid-size-h="Custom's" Power Armour MK3 Height
-custom-power-armor-mk3-grid-size-w="Custom's" Power Armour MK3 Width
+custom-power-armor-mk3-grid-size-h=Custom's Power Armour MK3 Height
+custom-power-armor-mk3-grid-size-w=Custom's Power Armour MK3 Width
 
-custom-power-armor-mk4-grid-size-h="Custom's" Power Armour MK4 Height
-custom-power-armor-mk4-grid-size-w="Custom's" Power Armour MK4 Width
+custom-power-armor-mk4-grid-size-h=Custom's Power Armour MK4 Height
+custom-power-armor-mk4-grid-size-w=Custom's Power Armour MK4 Width
 
-custom-power-armor-mk5-grid-size-h="Custom's" Power Armour MK5 Height
-custom-power-armor-mk5-grid-size-w="Custom's" Power Armour MK5 Width
+custom-power-armor-mk5-grid-size-h=Custom's Power Armour MK5 Height
+custom-power-armor-mk5-grid-size-w=Custom's Power Armour MK5 Width
 
 [mod-setting-description]
 
