--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -188,6 +188,13 @@ pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nBase Defa
 pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Industrial Revolution 2
+ir2-light-cas-grid-size-h=IR2 Light Armour Height\nMin:0\nMax:10\nBase Default:2\nMod Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+ir2-light-cas-grid-size-w=IR2 Light Armour Width\nMin:0\nMax:10\nBase Default:4\nMod Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
+
+ir2-heavy-cas-grid-size-h=IR2 Heavy Armour Height\nMin:0\nMax:10\nBase Default:2\nMod Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+ir2-heavy-cas-grid-size-w=IR2 Heavy Armour Width\nMin:0\nMax:10\nBase Default:6\nMod Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
+
 # Space Exploration
 cas-se-thruster-suit-inv-size=SE Space Suit 1\nMin:0\nMax:600\nBase Default:20\nMod Default:40
 cas-se-thruster-suit-2-inv-size=SE Space Suit 2\nMin:0\nMax:700\nBase Default:40\nMod Default:60
