--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -1,6 +1,9 @@
 [mod-setting-name]
 
 # Vanilla Armour's
+
+simulation_crash=Removes simulations
+
 v-cas-light-armor-inv-size=Light Armour Inv Size
 v-cas-heavy-armor-inv-size=Heavy Armour Inv Size
 v-cas-modular-armor-inv-size=Modular Armour Inv Size
@@ -131,6 +134,9 @@ custom-power-armor-mk5-grid-size-w=Custom's Power Armour MK5 Width
 # Also to keep the translation clean keep the Hight first and Witdh under
 
 # Vanilla Armour's
+
+simulation_crash=If checked, some simulations with equipment grids are removed\nIf un-checked, the simulations are not removed\n[color=red]Keep marked should simulation be a black error message[/color] 
+
 v-cas-light-armor-inv-size=Light Armour\nMin:0\nMax:200\nBase Default:0\nMod Default:5
 v-cas-heavy-armor-inv-size=Heavy Armour\nMin:0\nMax:300\nBase Default:0\nMod Default:10
 v-cas-modular-armor-inv-size=Modular Armour\nMin:0\nMax:500\nBase Default:10\nMod Default:15
