--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -135,7 +135,7 @@ custom-power-armor-mk5-grid-size-w=Custom's Power Armour MK5 Width
 
 # Vanilla Armour's
 
-simulation_crash=If checked, some simulations with equipment grids are removed\nIf un-checked, the simulations are not removed\n[color=red]Keep marked should simulation be a black error message[/color] 
+simulation_crash=Checked, some sims with equipment grids are removed\nUn-checked, the sims are not removed\n[color=red]Keep marked should simulation be a black screen w/error message[/color] 
 
 v-cas-light-armor-inv-size=Light Armour\nMin:0\nMax:200\nBase Default:0\nMod Default:5
 v-cas-heavy-armor-inv-size=Heavy Armour\nMin:0\nMax:300\nBase Default:0\nMod Default:10
