--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -102,6 +102,28 @@ extended-armour-mk2-grid-size-w="FE's" Elektrisk Rustning MK3 Bredde
 extended-armour-mk3-grid-size-h="FE's" Elektrisk Rustning MK3 Høyde
 extended-armour-mk3-grid-size-w="FE's" Elektrisk Rustning MK3 Bredde
 
+# MK10 Armour
+mk10-1-grid-size-h=sorry added later/ legger til senere
+mk10-1-grid-size-w=sorry added later/ legger til senere
+mk10-2-grid-size-h=sorry added later/ legger til senere
+mk10-2-grid-size-w=sorry added later/ legger til senere
+mk10-3-grid-size-h=sorry added later/ legger til senere
+mk10-3-grid-size-w=sorry added later/ legger til senere
+mk10-4-grid-size-h=sorry added later/ legger til senere
+mk10-4-grid-size-w=sorry added later/ legger til senere
+mk10-5-grid-size-h=sorry added later/ legger til senere
+mk10-5-grid-size-w=sorry added later/ legger til senere
+mk10-6-grid-size-h=sorry added later/ legger til senere
+mk10-6-grid-size-w=sorry added later/ legger til senere
+mk10-7-grid-size-h=sorry added later/ legger til senere
+mk10-7-grid-size-w=sorry added later/ legger til senere
+mk10-8-grid-size-h=sorry added later/ legger til senere
+mk10-8-grid-size-w=sorry added later/ legger til senere
+mk10-9-grid-size-h=sorry added later/ legger til senere
+mk10-9-grid-size-w=sorry added later/ legger til senere
+mk10-10-grid-size-h=sorry added later/ legger til senere
+mk10-10-grid-size-w=sorry added later/ legger til senere
+
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Elektrisk Rustning MK3 Inv Størrelse
 
