--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -4,7 +4,7 @@
 
 simulation_crash=Removes simulations
 
-v-cas-light-armor-inv-size=Light Armour Inv Size
+v-cas-light-armor-inv-size=Light Armour Inv Size [item]
 v-cas-heavy-armor-inv-size=Heavy Armour Inv Size
 v-cas-modular-armor-inv-size=Modular Armour Inv Size
 v-cas-power-armor-inv-size=Power Armour Mk1 Inv Size
@@ -34,6 +34,20 @@ bob-power-armor-mk4-grid-size-w=Bob's Power Armour MK4 Width
 
 bob-power-armor-mk5-grid-size-h=Bob's Power Armour MK5 Height
 bob-power-armor-mk5-grid-size-w=Bob's Power Armour MK5 Width
+
+# Custom Power Armour Fix/ (Custom Power Armour Reborn
+cas-custom-power-armor-mk3-inv-size=Custom's Power Armour MK3 Inv Size
+cas-custom-power-armor-mk4-inv-size=Custom's Power Armour MK4 Inv Size
+cas-custom-power-armor-mk5-inv-size=Custom's Power Armour MK5 Inv Size
+
+custom-power-armor-mk3-grid-size-h=Custom's Power Armour MK3 Height
+custom-power-armor-mk3-grid-size-w=Custom's Power Armour MK3 Width
+
+custom-power-armor-mk4-grid-size-h=Custom's Power Armour MK4 Height
+custom-power-armor-mk4-grid-size-w=Custom's Power Armour MK4 Width
+
+custom-power-armor-mk5-grid-size-h=Custom's Power Armour MK5 Height
+custom-power-armor-mk5-grid-size-w=Custom's Power Armour MK5 Width
 
 # Power Armour mk3
 cas-pamk3-lvest-inv-size=MK3's Light Utility Vest Inv Size
@@ -106,25 +120,43 @@ extended-armor-mk2-grid-size-w=FE's Power Armour MK2 Width
 extended-armor-mk3-grid-size-h=FE's Power Armour MK3 Height
 extended-armor-mk3-grid-size-w=FE's Power Armour MK3 Width
 
+# MK10 Armour
+mk10-1-grid-size-h=MK10's Armour MK1 Height
+mk10-1-grid-size-w=MK10's Armour MK1 Width
+
+mk10-2-grid-size-h=MK10's Armour MK2 Height
+mk10-2-grid-size-w=MK10's Armour MK2 Width
+
+mk10-3-grid-size-h=MK10's Armour MK3 Height
+mk10-3-grid-size-w=MK10's Armour MK3 Width
+
+mk10-4-grid-size-h=MK10's Armour MK4 Height
+mk10-4-grid-size-w=MK10's Armour MK4 Width
+
+mk10-5-grid-size-h=MK10's Armour MK5 Height
+mk10-5-grid-size-w=MK10's Armour MK5 Width
+
+mk10-6-grid-size-h=MK10's Armour MK6 Height
+mk10-6-grid-size-w=MK10's Armour MK6 Width
+
+mk10-7-grid-size-h=MK10's Armour MK7 Height 
+mk10-7-grid-size-w=MK10's Armour MK7 Width
+
+mk10-8-grid-size-h=MK10's Armour MK8 Height
+mk10-8-grid-size-w=MK10's Armour MK8 Width
+
+mk10-9-grid-size-h=MK10's Armour MK9 Height
+mk10-9-grid-size-w=MK10's Armour MK9 Width
+
+mk10-10-grid-size-h=MK10's Armour MK10 Height
+mk10-10-grid-size-w=MK10's Armour MK10 Width
+
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=Arsenal's Power Armour MK3 Inv Size
 
 power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Power Armour MK3 Height
 power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour MK3 Width
 
-# Custom Power Armour Fix/ (Custom Power Armour Reborn
-cas-custom-power-armor-mk3-inv-size=Custom's Power Armour MK3 Inv Size
-cas-custom-power-armor-mk4-inv-size=Custom's Power Armour MK4 Inv Size
-cas-custom-power-armor-mk5-inv-size=Custom's Power Armour MK5 Inv Size
-
-custom-power-armor-mk3-grid-size-h=Custom's Power Armour MK3 Height
-custom-power-armor-mk3-grid-size-w=Custom's Power Armour MK3 Width
-
-custom-power-armor-mk4-grid-size-h=Custom's Power Armour MK4 Height
-custom-power-armor-mk4-grid-size-w=Custom's Power Armour MK4 Width
-
-custom-power-armor-mk5-grid-size-h=Custom's Power Armour MK5 Height
-custom-power-armor-mk5-grid-size-w=Custom's Power Armour MK5 Width
 
 [mod-setting-description]
 
