--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -4,158 +4,169 @@
 
 simulation_crash=Removes simulations
 
-v-cas-light-armor-inv-size=Light Armour Inv Size [item]
-v-cas-heavy-armor-inv-size=Heavy Armour Inv Size
-v-cas-modular-armor-inv-size=Modular Armour Inv Size
-v-cas-power-armor-inv-size=Power Armour Mk1 Inv Size
-v-cas-power-armor-mk2-inv-size=Power Armour Mk2 Inv Size
+v-cas-light-armor-inv-size=[item=light-armor]Light Armour Inv-B Size 
+v-cas-heavy-armor-inv-size=[item=heavy-armor]Heavy Armour Inv-B Size
+v-cas-modular-armor-inv-size=[item=modular-armor]Modular Armour Inv-B Size
+v-cas-power-armor-inv-size=[item=power-armor]Power Armour Mk1 Inv-B Size
+v-cas-power-armor-mk2-inv-size=[item=power-armor-mk2]Power Armour Mk2 Inv-B Size
 
-modular-armor-grid-size-h=Modular Armour Height
-modular-armor-grid-size-w=Modular Armour Width
+modular-armor-grid-size-h=[item=modular-armor]Modular Armour Height
+modular-armor-grid-size-w=[item=modular-armor]Modular Armour Width
 
-power-armor-grid-size-h=Power Armour MK1 Height
-power-armor-grid-size-w=Power Armour MK1 Width
+power-armor-grid-size-h=[item=power-armor]Power Armour MK1 Height
+power-armor-grid-size-w=[item=power-armor]Power Armour MK1 Width
 
-power-armor-mk2-grid-size-h=Power Armour MK2 Height
-power-armor-mk2-grid-size-w=Power Armour MK2 Width
+power-armor-mk2-grid-size-h=[item=power-armor-mk2]Power Armour MK2 Height
+power-armor-mk2-grid-size-w=[item=power-armor-mk2]Power Armour MK2 Width
 
 # Bob's Armour's
-cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armor Mk2 Inv Size
-cas-bob-heavy-armor-3-inv-size=Bob's Heavy Armor MK3 Inv Size
-cas-bob-power-armor-mk3-inv-size=Bob's Power Armour MK3 Inv Size
-cas-bob-power-armor-mk4-inv-size=Bob's Power Armour MK4 Inv Size
-cas-bob-power-armor-mk5-inv-size=Bob's Power Armour MK5 Inv Size
+cas-bob-heavy-armor-2-inv-size=[item=heavy-armor-2]Bob's Heavy Armor Mk2 Inv-B Size
+cas-bob-heavy-armor-3-inv-size=[item=heavy-armor-3]Bob's Heavy Armor MK3 Inv-B Size
+cas-bob-power-armor-mk3-inv-size=[item=bob-power-armor-mk3]Bob's Power Armour MK3 Inv-B Size
+cas-bob-power-armor-mk4-inv-size=[item=bob-power-armor-mk4]Bob's Power Armour MK4 Inv-B Size
+cas-bob-power-armor-mk5-inv-size=[item=bob-power-armor-mk5]Bob's Power Armour MK5 Inv-B Size
 
-bob-power-armor-mk3-grid-size-h=Bob's Power Armour MK3 Height
-bob-power-armor-mk3-grid-size-w=Bob's Power Armour MK3 Width
+bob-power-armor-mk3-grid-size-h=[item=bob-power-armor-mk3]Bob's Power Armour MK3 Height
+bob-power-armor-mk3-grid-size-w=[item=bob-power-armor-mk3]Bob's Power Armour MK3 Width
 
-bob-power-armor-mk4-grid-size-h=Bob's Power Armour MK4 Height
-bob-power-armor-mk4-grid-size-w=Bob's Power Armour MK4 Width
+bob-power-armor-mk4-grid-size-h=[item=bob-power-armor-mk4]Bob's Power Armour MK4 Height
+bob-power-armor-mk4-grid-size-w=[item=bob-power-armor-mk4]Bob's Power Armour MK4 Width
 
-bob-power-armor-mk5-grid-size-h=Bob's Power Armour MK5 Height
-bob-power-armor-mk5-grid-size-w=Bob's Power Armour MK5 Width
+bob-power-armor-mk5-grid-size-h=[item=bob-power-armor-mk5]Bob's Power Armour MK5 Height
+bob-power-armor-mk5-grid-size-w=[item=bob-power-armor-mk5]Bob's Power Armour MK5 Width
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn
-cas-custom-power-armor-mk3-inv-size=Custom's Power Armour MK3 Inv Size
-cas-custom-power-armor-mk4-inv-size=Custom's Power Armour MK4 Inv Size
-cas-custom-power-armor-mk5-inv-size=Custom's Power Armour MK5 Inv Size
+cas-custom-power-armor-mk3-inv-size=[item=power-armor-mk3]Custom's Power Armour MK3 Inv-B Size
+cas-custom-power-armor-mk4-inv-size=[item=power-armor-mk4]Custom's Power Armour MK4 Inv-B Size
+cas-custom-power-armor-mk5-inv-size=[item=power-armor-mk5]Custom's Power Armour MK5 Inv-B Size
 
-custom-power-armor-mk3-grid-size-h=Custom's Power Armour MK3 Height
-custom-power-armor-mk3-grid-size-w=Custom's Power Armour MK3 Width
+custom-power-armor-mk3-grid-size-h=[item=power-armor-mk3]Custom's Power Armour MK3 Height
+custom-power-armor-mk3-grid-size-w=[item=power-armor-mk3]Custom's Power Armour MK3 Width
 
-custom-power-armor-mk4-grid-size-h=Custom's Power Armour MK4 Height
-custom-power-armor-mk4-grid-size-w=Custom's Power Armour MK4 Width
+custom-power-armor-mk4-grid-size-h=[item=power-armor-mk4]Custom's Power Armour MK4 Height
+custom-power-armor-mk4-grid-size-w=[item=power-armor-mk4]Custom's Power Armour MK4 Width
 
-custom-power-armor-mk5-grid-size-h=Custom's Power Armour MK5 Height
-custom-power-armor-mk5-grid-size-w=Custom's Power Armour MK5 Width
+custom-power-armor-mk5-grid-size-h=[item=power-armor-mk5]Custom's Power Armour MK5 Height
+custom-power-armor-mk5-grid-size-w=[item=power-armor-mk5]Custom's Power Armour MK5 Width
 
 # Power Armour mk3
-cas-pamk3-lvest-inv-size=MK3's Light Utility Vest Inv Size
-cas-pamk3-hvest-inv-size=MK3's Hevay Utility Vest Inv Size
-cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3 Inv Size
-cas-pamk3-pamk4-inv-size=MK3's Power Armour MK4 Inv Size
+cas-pamk3-lvest-inv-size=[item=pamk3-lvest]MK3's Light Utility Vest Inv-B Size
+cas-pamk3-hvest-inv-size=[item=pamk3-hvest]MK3's Hevay Utility Vest Inv-B Size
+cas-pamk3-pamk3-inv-size=[item=pamk3-pamk3]MK3's Power Armour MK3 Inv-B Size
+cas-pamk3-pamk4-inv-size=[item=pamk3-pamk4]MK3's Power Armour MK4 Inv-B Size
 
-pamk3-pmak3-grid-size-h=Mk3's Power Armour MK3 Height
-pamk3-pmak3-grid-size-w=Mk3's Power Armour MK3 Width
+pamk3-pmak3-grid-size-h=[item=pamk3-pamk3]Mk3's Power Armour MK3 Height
+pamk3-pmak3-grid-size-w=[item=pamk3-pamk3]Mk3's Power Armour MK3 Width
 
-pamk3-pmak4-grid-size-h=Mk3's Power Armour MK4 Height
-pamk3-pmak4-grid-size-w=Mk3's Power Armour MK4 Width
+pamk3-pmak4-grid-size-h=[item=pamk3-pamk4]Mk3's Power Armour MK4 Height
+pamk3-pmak4-grid-size-w=[item=pamk3-pamk4]Mk3's Power Armour MK4 Width
 
 # Industrial Revolution 2
-ir2-light-cas-grid-size-h=IR2 Light Armour Height
-ir2-light-cas-grid-size-w=IR2 Light Armour Width
+ir2-light-cas-grid-size-h=[item=light-armor]IR2 Light Armour Height
+ir2-light-cas-grid-size-w=[item=light-armor]IR2 Light Armour Width
 
-ir2-heavy-cas-grid-size-h=IR2 Heavy Armour Height
-ir2-heavy-cas-grid-size-w=IR2 Heavy Armour Width
+ir2-heavy-cas-grid-size-h=[item=heavy-armor]IR2 Heavy Armour Height
+ir2-heavy-cas-grid-size-w=[item=heavy-armor]IR2 Heavy Armour Width
 
 # Krastorio 2
-mk3-armor-grid-size-h=K2's Power Armour MK3 Height
-mk3-armor-grid-size-w=K2's Power Armour MK3 Width
+mk3-armor-grid-size-h=[item=power-armor-mk3]K2's Power Armour MK3 Height
+mk3-armor-grid-size-w=[item=power-armor-mk3]K2's Power Armour MK3 Width
 
-mk4-armor-grid-size-h=K2's Power Armour MK4 Height
-mk4-armor-grid-size-w=K2's Power Armour MK4 Width
+mk4-armor-grid-size-h=[item=power-armor-mk4]K2's Power Armour MK4 Height
+mk4-armor-grid-size-w=[item=power-armor-mk4]K2's Power Armour MK4 Width
 
-cas-k2-power-armor-mk3-inv-size=K2's Power Armour Mk3 Inv Size
-cas-k2-power-armor-mk4-inv-size=K2's Power Armour Mk4 Inv Size
+cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3]K2's Power Armour Mk3 Inv-B Size
+cas-k2-power-armor-mk4-inv-size=[item=power-armor-mk4]K2's Power Armour Mk4 Inv-B Size
 
 # Space Exploration
-cas-se-thruster-suit-inv-size=SE's Space Suit 1 Inv Size
-cas-se-thruster-suit-2-inv-size=SE's Space Suit 2 Inv Size
-cas-se-thruster-suit-3-inv-size=SE's Space Suit 3 Inv Size
-cas-se-thruster-suit-4-inv-size=SE's Space Suit 4 Inv Size
+cas-se-thruster-suit-inv-size=[item=se-thruster-suit]SE's Space Suit 1 Inv-B Size
+cas-se-thruster-suit-2-inv-size=[item=se-thruster-suit-2]SE's Space Suit 2 Inv-B Size
+cas-se-thruster-suit-3-inv-size=[item=se-thruster-suit-3]SE's Space Suit 3 Inv-B Size
+cas-se-thruster-suit-4-inv-size=[item=se-thruster-suit-4]SE's Space Suit 4 Inv-B Size
 
-se-thruster-suit-grid-size-h=SE's Space Suit 1 Height
-se-thruster-suit-grid-size-w=SE's Space Suit 1 Width
+se-thruster-suit-grid-size-h=[item=se-thruster-suit]SE's Space Suit 1 Height
+se-thruster-suit-grid-size-w=[item=se-thruster-suit]SE's Space Suit 1 Width
 
-se-thruster-suit-2-grid-size-h=SE's Space Suit 2 Height
-se-thruster-suit-2-grid-size-w=SE's Space Suit 2 Width
+se-thruster-suit-2-grid-size-h=[item=se-thruster-suit-2]SE's Space Suit 2 Height
+se-thruster-suit-2-grid-size-w=[item=se-thruster-suit-2]SE's Space Suit 2 Width
 
-se-thruster-suit-3-grid-size-h=SE's Space Suit 3 Height
-se-thruster-suit-3-grid-size-w=SE's Space Suit 3 Width
+se-thruster-suit-3-grid-size-h=[item=se-thruster-suit-3]SE's Space Suit 3 Height
+se-thruster-suit-3-grid-size-w=[item=se-thruster-suit-3]SE's Space Suit 3 Width
 
-se-thruster-suit-4-grid-size-h=SE's Space Suit 4 Height
-se-thruster-suit-4-grid-size-w=SE's Space Suit 4 Width
+se-thruster-suit-4-grid-size-h=[item=se-thruster-suit-4]SE's Space Suit 4 Height
+se-thruster-suit-4-grid-size-w=[item=se-thruster-suit-4]SE's Space Suit 4 Width
 
 # Power And Armour
-cas-PaA-power-armor-mk3-inv-size=P&A's Power Armour MK3 Inv Size
-cas-PaA-power-armor-mk4-inv-size=P&A's Power Armour MK4 Inv Size
+cas-PaA-power-armor-mk3-inv-size=[item=PaA-power-armor-mk3]P&A's Power Armour MK3 Inv-B Size
+cas-PaA-power-armor-mk4-inv-size=[item=PaA-power-armor-mk4]P&A's Power Armour MK4 Inv-B Size
 
-pa-mk3-grid-size-h=P&A's Power Armours MK3 Height
-pa-mk3-grid-size-w=P&A's Power Armours MK3 Width
+pa-mk3-grid-size-h=[item=PaA-power-armor-mk3]P&A's Power Armours MK3 Height
+pa-mk3-grid-size-w=[item=PaA-power-armor-mk3]P&A's Power Armours MK3 Width
 
-pa-mk4-grid-size-h=P&A's Power Armours MK4 Height
-pa-mk4-grid-size-w=P&A's Power Armours MK4 Width
+pa-mk4-grid-size-h=[item=PaA-power-armor-mk4]P&A's Power Armours MK4 Height
+pa-mk4-grid-size-w=[item=PaA-power-armor-mk4]P&A's Power Armours MK4 Width
 
 # Factorio Extended Equipment
-cas-extended-power-armor-1-inv-size=FE's Power Armour 1 Inv Size
-cas-extended-power-armor-2-inv-size=FE's Power Armour 2 Inv Size
-cas-extended-power-armor-3-inv-size=FE's Power Armour 3 Inv Size
+cas-extended-power-armor-1-inv-size=[item=power-armor-1]FE's Power Armour 1 Inv-B Size
+cas-extended-power-armor-2-inv-size=[item=power-armor-2]FE's Power Armour 2 Inv-B Size
+cas-extended-power-armor-3-inv-size=[item=power-armor-3]FE's Power Armour 3 Inv-B Size
 
-extended-armor-mk1-grid-size-h=FE's Power Armour MK1 Height
-extended-armor-mk1-grid-size-w="FE's Power Armour MK1 Width
+extended-armor-mk1-grid-size-h=[item=power-armor-1]FE's Power Armour MK1 Height
+extended-armor-mk1-grid-size-w=[item=power-armor-1]FE's Power Armour MK1 Width
 
-extended-armor-mk2-grid-size-h=FE's Power Armour MK2 Height
-extended-armor-mk2-grid-size-w=FE's Power Armour MK2 Width
+extended-armor-mk2-grid-size-h=[item=power-armor-2]FE's Power Armour MK2 Height
+extended-armor-mk2-grid-size-w=[item=power-armor-2]FE's Power Armour MK2 Width
 
-extended-armor-mk3-grid-size-h=FE's Power Armour MK3 Height
-extended-armor-mk3-grid-size-w=FE's Power Armour MK3 Width
+extended-armor-mk3-grid-size-h=[item=power-armor-3]FE's Power Armour MK3 Height
+extended-armor-mk3-grid-size-w=[item=power-armor-3]FE's Power Armour MK3 Width
 
 # MK10 Armour
-mk10-1-grid-size-h=MK10's Armour MK1 Height
-mk10-1-grid-size-w=MK10's Armour MK1 Width
+mk10-1-grid-size-h=[item=a_mk1]MK10's Armour MK1 Height
+mk10-1-grid-size-w=[item=a_mk1]MK10's Armour MK1 Width
 
-mk10-2-grid-size-h=MK10's Armour MK2 Height
-mk10-2-grid-size-w=MK10's Armour MK2 Width
+mk10-2-grid-size-h=[item=a_mk2]MK10's Armour MK2 Height
+mk10-2-grid-size-w=[item=a_mk2]MK10's Armour MK2 Width
 
-mk10-3-grid-size-h=MK10's Armour MK3 Height
-mk10-3-grid-size-w=MK10's Armour MK3 Width
+mk10-3-grid-size-h=[item=a_mk3]MK10's Armour MK3 Height
+mk10-3-grid-size-w=[item=a_mk3]MK10's Armour MK3 Width
 
-mk10-4-grid-size-h=MK10's Armour MK4 Height
-mk10-4-grid-size-w=MK10's Armour MK4 Width
+mk10-4-grid-size-h=[item=a_mk4]MK10's Armour MK4 Height
+mk10-4-grid-size-w=[item=a_mk4]MK10's Armour MK4 Width
 
-mk10-5-grid-size-h=MK10's Armour MK5 Height
-mk10-5-grid-size-w=MK10's Armour MK5 Width
+mk10-5-grid-size-h=[item=a_mk5]MK10's Armour MK5 Height
+mk10-5-grid-size-w=[item=a_mk5]MK10's Armour MK5 Width
 
-mk10-6-grid-size-h=MK10's Armour MK6 Height
-mk10-6-grid-size-w=MK10's Armour MK6 Width
+mk10-6-grid-size-h=[item=a_mk6]MK10's Armour MK6 Height
+mk10-6-grid-size-w=[item=a_mk6]MK10's Armour MK6 Width
 
-mk10-7-grid-size-h=MK10's Armour MK7 Height 
-mk10-7-grid-size-w=MK10's Armour MK7 Width
+mk10-7-grid-size-h=[item=a_mk7]MK10's Armour MK7 Height 
+mk10-7-grid-size-w=[item=a_mk7]MK10's Armour MK7 Width
 
-mk10-8-grid-size-h=MK10's Armour MK8 Height
-mk10-8-grid-size-w=MK10's Armour MK8 Width
+mk10-8-grid-size-h=[item=a_mk8]MK10's Armour MK8 Height
+mk10-8-grid-size-w=[item=a_mk8]MK10's Armour MK8 Width
 
-mk10-9-grid-size-h=MK10's Armour MK9 Height
-mk10-9-grid-size-w=MK10's Armour MK9 Width
+mk10-9-grid-size-h=[item=a_mk9]MK10's Armour MK9 Height
+mk10-9-grid-size-w=[item=a_mk9]MK10's Armour MK9 Width
 
-mk10-10-grid-size-h=MK10's Armour MK10 Height
-mk10-10-grid-size-w=MK10's Armour MK10 Width
+mk10-10-grid-size-h=[item=a_mk10]MK10's Armour MK10 Height
+mk10-10-grid-size-w=[item=a_mk10]MK10's Armour MK10 Width
+
+m-cas-1-a_mk1-inv-size=[item=a_mk1]MK10's Power Armour MK1 Inv-B Size
+m-cas-2-a_mk2-inv-size=[item=a_mk2]MK10's Power Armour MK1 Inv-B Size
+m-cas-3-a_mk3-inv-size=[item=a_mk3]MK10's Power Armour MK1 Inv-B Size
+m-cas-4-a_mk4-inv-size=[item=a_mk4]MK10's Power Armour MK1 Inv-B Size
+m-cas-5-a_mk5-inv-size=[item=a_mk5]MK10's Power Armour MK1 Inv-B Size
+m-cas-6-a_mk6-inv-size=[item=a_mk6]MK10's Power Armour MK1 Inv-B Size
+m-cas-7-a_mk7-inv-size=[item=a_mk7]MK10's Power Armour MK1 Inv-B Size
+m-cas-8-a_mk8-inv-size=[item=a_mk8]MK10's Power Armour MK1 Inv-B Size
+m-cas-9-a_mk9-inv-size=[item=a_mk9]MK10's Power Armour MK1 Inv-B Size
+m-cas-10-a_mk10-inv-size=[item=a_mk10]MK10's Power Armour MK1 Inv-B Size
 
 # Rampant Arsenal
-cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=Arsenal's Power Armour MK3 Inv Size
+cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=[item=power-armor-mk3-armor-rampant-arsenal]Arsenal's Power Armour MK3 Inv-B Size
 
-power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Power Armour MK3 Height
-power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour MK3 Width
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=[item=power-armor-mk3-armor-rampant-arsenal]Arsenal's Power Armour MK3 Height
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=[item=power-armor-mk3-armor-rampant-arsenal]Arsenal's Power Armour MK3 Width
 
 
 [mod-setting-description]
@@ -163,7 +174,7 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour MK3 Wid
 # Explaining the (Base & Mod Defaults): 
 # Mod Defaults is what my mod set the sizes to.
 # Base Defaults is what the game/mod u installed before i did my changes has set the size to.
-# Also to keep the translation clean keep the Hight first and Witdh under
+# Also to keep the translation clean keep the Hight first and Witdh under, Should u do a pull request.
 
 # Vanilla Armour's
 
