--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -178,7 +178,7 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-w=[item=power-armor-mk3-armor-ra
 
 # Vanilla Armour's
 
-simulation_crash=Checked, some sims with equipment grids are removed\nUn-checked, the sims are not removed\n[color=red]Keep marked should simulation be a black screen w/error message[/color] 
+simulation_crash=Checked this box\n Sims with equipment grids are removed\nUn-checked this box \nthe sims are not removed\n[color=red]Keep marked should simulation be a black screen w/error message[/color] 
 
 v-cas-light-armor-inv-size=Light Armour\nMin:0\nMax:200\nBase Default:0\nMod Default:5
 v-cas-heavy-armor-inv-size=Heavy Armour\nMin:0\nMax:300\nBase Default:0\nMod Default:10
