--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -82,14 +82,14 @@ cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3][color=#9000d3]K2's Power 
 cas-k2-power-armor-mk4-inv-size=[item=power-armor-mk4][color=#9000d3]K2's Power Armour Mk4 Inv-B Size[/color]
 
 # Power And Armour
-cas-PaA-power-armor-mk3-inv-size=[item=PaA-power-armor-mk3][color=#0a5000]P&A's Power Armour MK3 Inv-B Size[/color]
-cas-PaA-power-armor-mk4-inv-size=[item=PaA-power-armor-mk4][color=#0a5000]P&A's Power Armour MK4 Inv-B Size[/color]
+cas-PaA-power-armor-mk3-inv-size=[item=PaA-power-armor-mk3][color=#89CE94]P&A's Power Armour MK3 Inv-B Size[/color]
+cas-PaA-power-armor-mk4-inv-size=[item=PaA-power-armor-mk4][color=#89CE94]P&A's Power Armour MK4 Inv-B Size[/color]
 
-pa-mk3-grid-size-h=[item=PaA-power-armor-mk3][color=#0a5000]P&A's Power Armours MK3 Height[/color]
-pa-mk3-grid-size-w=[item=PaA-power-armor-mk3][color=#0a5000]P&A's Power Armours MK3 Width[/color]
+pa-mk3-grid-size-h=[item=PaA-power-armor-mk3][color=#89CE94]P&A's Power Armours MK3 Height[/color]
+pa-mk3-grid-size-w=[item=PaA-power-armor-mk3][color=#89CE94]P&A's Power Armours MK3 Width[/color]
 
-pa-mk4-grid-size-h=[item=PaA-power-armor-mk4][color=#0a5000]P&A's Power Armours MK4 Height[/color]
-pa-mk4-grid-size-w=[item=PaA-power-armor-mk4][color=#0a5000]P&A's Power Armours MK4 Width[/color]
+pa-mk4-grid-size-h=[item=PaA-power-armor-mk4][color=#89CE94]P&A's Power Armours MK4 Height[/color]
+pa-mk4-grid-size-w=[item=PaA-power-armor-mk4][color=#89CE94]P&A's Power Armours MK4 Width[/color]
 
 # Power Armour mk3
 cas-pamk3-lvest-inv-size=[item=pamk3-lvest][color=#101798]MK3's Light Utility Vest Inv-B Size[/color]
@@ -146,10 +146,10 @@ m-cas-9-a_mk9-inv-size=[item=a_mk9][color=#e00700]P.A.R's Power Armour MK9 Inv-B
 m-cas-10-a_mk10-inv-size=[item=a_mk10][color=#e00700]P.A.R's Power Armour MK10 Inv-B Size[/color]
 
 # Rampant Arsenal
-cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=[item=power-armor-mk3-armor-rampant-arsenal][color=green]Arsenal's Power Armour MK3 Inv-B Size[/color]
+cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Inv-B Size[/color]
 
-power-armor-mk3-armor-rampant-arsenal-grid-size-h=[item=power-armor-mk3-armor-rampant-arsenal][color=green]Arsenal's Power Armour MK3 Height[/color]
-power-armor-mk3-armor-rampant-arsenal-grid-size-w=[item=power-armor-mk3-armor-rampant-arsenal][color=green]Arsenal's Power Armour MK3 Width[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Height[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Width[/color]
 
 # Space Exploration
 cas-se-thruster-suit-inv-size=[item=se-thruster-suit][color=pink]SE's Space Suit 1 Inv-B Size[/color]
