--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -64,12 +64,12 @@ extended-armor-mk3-grid-size-h=[item=power-armor-3][color=cyan]FE's Power Armour
 extended-armor-mk3-grid-size-w=[item=power-armor-3][color=cyan]FE's Power Armour MK3 Width[/color]
 
 
-# Industrial Revolution 2
-ir2-light-cas-grid-size-h=[item=light-armor][color=brown]IR2 Light Armour Height[/color]
-ir2-light-cas-grid-size-w=[item=light-armor][color=brown]IR2 Light Armour Width[/color]
+# IndustrialRevolution3
+ir3-light-cas-grid-size-h=[item=light-armor][color=brown]IR3 Light Armour Height[/color]
+ir3-light-cas-grid-size-w=[item=light-armor][color=brown]IR3 Light Armour Width[/color]
 
-ir2-heavy-cas-grid-size-h=[item=heavy-armor][color=brown]IR2 Heavy Armour Height[/color]
-ir2-heavy-cas-grid-size-w=[item=heavy-armor][color=brown]IR2 Heavy Armour Width[/color]
+ir3-heavy-cas-grid-size-h=[item=heavy-armor][color=brown]IR3 Heavy Armour Height[/color]
+ir3-heavy-cas-grid-size-w=[item=heavy-armor][color=brown]IR3 Heavy Armour Width[/color]
 
 # Krastorio 2
 mk3-armor-grid-size-h=[item=power-armor-mk3][color=#9000d3]K2's Power Armour MK3 Height[/color]
@@ -178,7 +178,7 @@ se-thruster-suit-4-grid-size-w=[item=se-thruster-suit-4][color=pink]SE's Space S
 
 # Vanilla Armour's
 
-simulation_crash=Checked this box\nSims with equipment grids are removed\nUn-checked this box \nThe sims are not removed\n[color=red]Keep marked should the simulation be a black screen w/error message[/color] 
+simulation_crash=Checked this box\nSims with equipment grids are removed.\nUn-checked this box \nThe sims are not removed.\n[color=red]Keep marked should the simulation be a black screen w/error message[/color] 
 
 v-cas-light-armor-inv-size=Light Armour\nMin:0\nMax:200\nBase Default:0\nMod Default:5
 v-cas-heavy-armor-inv-size=Heavy Armour\nMin:0\nMax:300\nBase Default:0\nMod Default:10
@@ -237,12 +237,12 @@ pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nBase Defa
 pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-# Industrial Revolution 2
-ir2-light-cas-grid-size-h=IR2 Light Armour Height\nMin:0\nMax:10\nBase Default:2\nMod Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-ir2-light-cas-grid-size-w=IR2 Light Armour Width\nMin:0\nMax:10\nBase Default:4\nMod Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
+# IndustrialRevolution3
+ir3-light-cas-grid-size-h=IR3 Light Armour Height\nMin:0\nMax:10\nBase Default:2\nMod Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+ir3-light-cas-grid-size-w=IR3 Light Armour Width\nMin:0\nMax:10\nBase Default:4\nMod Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
 
-ir2-heavy-cas-grid-size-h=IR2 Heavy Armour Height\nMin:0\nMax:10\nBase Default:2\nMod Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-ir2-heavy-cas-grid-size-w=IR2 Heavy Armour Width\nMin:0\nMax:10\nBase Default:6\nMod Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
+ir3-heavy-cas-grid-size-h=IR3 Heavy Armour Height\nMin:0\nMax:10\nBase Default:2\nMod Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+ir3-heavy-cas-grid-size-w=IR3 Heavy Armour Width\nMin:0\nMax:10\nBase Default:6\nMod Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
 
 # Space Exploration
 cas-se-thruster-suit-inv-size=SE Space Suit 1\nMin:0\nMax:600\nBase Default:20\nMod Default:40
