--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -43,12 +43,12 @@ pamk3-pmak3-grid-size-w=[item=pamk3-pamk3]Mk3's Elektrisk Rustning MK3 Bredde
 pamk3-pmak4-grid-size-h=[item=pamk3-pamk4]Mk3's Elektrisk Rustning MK4 Høyde
 pamk3-pmak4-grid-size-w=[item=pamk3-pamk4]Mk3's Elektrisk Rustning MK4 Bredde
 
-# Industrial Revolution 2
-ir2-light-cas-grid-size-h=[item=light-armor]IR2 Lett Rustning Høyde
-ir2-light-cas-grid-size-w=[item=light-armor]IR2 Lett Rustning Bredde
+# IndustrialRevolution3
+ir3-light-cas-grid-size-h=[item=light-armor][color=brown]IR3 Lett Rustning Høyde[/color]
+ir3-light-cas-grid-size-w=[item=light-armor][color=brown]IR3 Lett Rustning Bredde[/color]
 
-ir2-heavy-cas-grid-size-h=[item=heavy-armor]IR2 Tung Rustning Høyde
-ir2-heavy-cas-grid-size-w=[item=heavy-armor]IR2 Tung Rustning Bredde
+ir3-heavy-cas-grid-size-h=[item=heavy-armor][color=brown]IR3 Tung Rustning Høyde[/color]
+ir3-heavy-cas-grid-size-w=[item=heavy-armor][color=brown]IR3 Tung Rustning Bredde[/color]
 
 # Krastorio 2
 cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3]K2 Power Armour Mk3 Inv Størrelse
@@ -166,6 +166,11 @@ custom-power-armor-mk5-grid-size-w=[item=power-armor-mk5]Custom's Elektrisk Rust
 
 [mod-setting-description]
 
+# Explaining the (Base & Mod Defaults): 
+# Mod Defaults is what my mod set the sizes to.
+# Base Defaults is what the game/mod u installed before i did my changes has set the size to.
+# Also to keep the translation clean keep the Hight first and Witdh under, Should u do a pull request.
+
 # Vanilla Armour's
 v-cas-light-armor-inv-size=Lett Rustning\nMin:0\nMaks:200\nSpillets Normal:0\nModden's Normal:5
 v-cas-heavy-armor-inv-size=Tung Rustning\nMin:0\nMaks:300\nSpillets Normal:0\nModden's Normal:10
@@ -203,14 +208,21 @@ cas-custom-power-armor-mk3-inv-size=Custom Elektrisk Rustning MK3\nMin:0\nMax:80
 cas-custom-power-armor-mk4-inv-size=Custom Elektrisk Rustning MK4\nMin:0\nMax:900\nSpillets Normal:40\nModden's Normal:50
 cas-custom-power-armor-mk5-inv-size=Custom Elektrisk Rustning MK5\nMin:0\nMax:1000\nSpillets Normal:40\nModden's Normal:60
 
-custom-power-armor-mk3-grid-size-h=Custom's Elektrisk Rustning MK3 Height\nMin:0\nMaks:40\nSpillets Normal:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk3-grid-size-h=Custom's Elektrisk Rustning MK3 Høyde\nMin:0\nMaks:40\nSpillets Normal:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 custom-power-armor-mk3-grid-size-w=Custom's Elektrisk Rustning MK3 Bredde\nMin:0\nMaks:40\nSpillets Normal:12\nModden's Normal:30\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-custom-power-armor-mk4-grid-size-h=Custom's Elektrisk Rustning MK4 Height\nMin:0\nMaks:50\nSpillets Normal:14\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk4-grid-size-h=Custom's Elektrisk Rustning MK4 Høyde\nMin:0\nMaks:50\nSpillets Normal:14\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 custom-power-armor-mk4-grid-size-w=Custom's Elektrisk Rustning MK4 Bredde\nMin:0\nMaks:50\nSpillets Normal:14\nModden's Normal:40\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-custom-power-armor-mk5-grid-size-h=Custom's Elektrisk Rustning MK5 Height\nMin:0\nMaks:500\nSpillets Normal:16\nModden's Normal:50\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk5-grid-size-h=Custom's Elektrisk Rustning MK5 Høyde\nMin:0\nMaks:500\nSpillets Normal:16\nModden's Normal:50\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 custom-power-armor-mk5-grid-size-w=Custom's Elektrisk Rustning MK5 Bredde\nMin:0\nMaks:500\nSpillets Normal:16\nModden's Normal:50\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+# IndustrialRevolution3
+ir3-light-cas-grid-size-h=IR3 Lett Rustning Høyde\nMin:0\nMax:10\nBase Default:2\nMod Default:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ir3-light-cas-grid-size-w=IR3 Lett Rustning Bredde\nMin:0\nMax:10\nBase Default:4\nMod Default:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
+
+ir3-heavy-cas-grid-size-h=IR3 Tung Rustning Høyde\nMin:0\nMax:10\nBase Default:2\nMod Default:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ir3-heavy-cas-grid-size-w=IR3 Tung Rustning Bredde\nMin:0\nMax:10\nBase Default:6\nMod Default:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
 
 # Power Armour mk3 
 cas-pamk3-lvest-inv-size=MK3's Lett Bruksvest\nMin:0\nMaks:500\nSpillets Normal:10\nModden's Normal:15
