--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -145,7 +145,7 @@ m-cas-8-a_mk8-inv-size=[item=a_mk8][color=#e00700]P.A.R's Power Armour MK8 Inv-B
 m-cas-9-a_mk9-inv-size=[item=a_mk9][color=#e00700]P.A.R's Power Armour MK9 Inv-B Size[/color]
 m-cas-10-a_mk10-inv-size=[item=a_mk10][color=#e00700]P.A.R's Power Armour MK10 Inv-B Size[/color]
 
-hard_science_required=[item=space-science-pack]Adding space science pack
+hard_science_required=[item=space-science-pack][color=#e00700]Adding space science packs[/color]
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Inv-B Size[/color]
@@ -340,7 +340,7 @@ m-cas-8-a_mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBas
 m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-hard_science_required= Adding space science packs to tech from MK6 --> MK10
+hard_science_required=Adding space science packs to be required in reserching techs at MK6 --> MK10 & 1, MK5
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3\nMin:0\nMax:1500\nBase Default:60
