--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -144,6 +144,8 @@ m-cas-8-a_mk8-inv-size=[item=a_mk8]P.A.R's Elektrisk Rustning MK8 Inv Størrelse
 m-cas-9-a_mk9-inv-size=[item=a_mk9]P.A.R's Elektrisk Rustning MK9 Inv Størrelse
 m-cas-10-a_mk10-inv-size=[item=a_mk10]P.A.R's Elektrisk Rustning MK10 Inv Størrelse
 
+hard_science_required=[item=space-science-pack]legger til Verdensrom Forsknings Pakker
+
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=[item=power-armor-mk3-armor-rampant-arsenal]R.A Elektrisk Rustning MK3 Inv Størrelse
 
@@ -329,6 +331,8 @@ m-cas-7-a_mk7-inv-size=P.A.R's Elektrisk Rustning MK7 Inv Størrelse\nMin:0\nMak
 m-cas-8-a_mk8-inv-size=P.A.R's Elektrisk Rustning MK8 Inv Størrelse\nMin:0\nMaks:4000\nBase Default:400
 m-cas-9-a_mk9-inv-size=P.A.R's Elektrisk Rustning MK9 Inv Størrelse\nMin:0\nMaks:4500\nBase Default:450
 m-cas-10-a_mk10-inv-size=P.A.R's Elektrisk Rustning MK10 Inv Størrelse\nMin:0\nMaks:5000\nBase Default:500
+
+hard_science_required=legger til ekstra Verdensrom Forsknings Pakker til teknologier. For å gjøre det vanskeligere.
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Elektrisk Rustning MK3\nMin:0\nMaks:1500\nSpillets Normal:60
